# django-inline-actions

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  README.rst  package-lock.json  package.json  pyproject.toml  pyproject.toml.rej  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  test.yml  update.yml
inline_actions/: actions.py  admin.py  compat.py
inline_actions/static/inline_actions/css/: inline_actions.css
inline_actions/templatetags/: inline_action_tags.py
test_proj/: __init__.py  conftest.py  settings.py  urls.py  wsgi.py
test_proj/blog/: admin.py  custom_admin.py  forms.py  models.py
test_proj/blog/migrations/: 0001_initial.py
test_proj/blog/templates/: change_title.html
test_proj/blog/tests/: test_admin.py  test_form.py  test_inline_admin.py  test_model_admin.py  test_templatetags.py
