[tool.poetry]
name = "django-inline-actions"
version = "2.0.2"
description = "django-inline-actions adds actions to the InlineModelAdmin."
authors = [
    "Alexander Frenzel <alex@relatedworks.com>",
]

license = "BSD-3-Clause"
readme = "README.rst"

documentation = "https://github.com/escaped/django-inline-actions/blob/master/README.rst"
homepage = "https://github.com/escaped/django-inline-actions/"
repository = "https://github.com/escaped/django-inline-actions/"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


packages = [
  { include = "inline_actions" },
]

[tool.poetry.dependencies]
python = ">=3.4,<3.7"
django = ">=2.0,<2.1"

[tool.poetry.dev-dependencies]
django-webtest = "^1.9.2"
flake8 = "^3.5"
flake8-isort = "^2.5"
ipython = "^6.4"
pdbpp = "^0.9.2"
pytest = "^3.0"
pytest-coverage = "^0.0.0"
pytest-django = "^3.3"
pytest-flake8 = "^1.0"
pytest-mock = "^1.10"
pytest-pythonpath = "^0.7.1"
tox = "^3.1"
