[tool.poetry]
name = "django-inline-actions"
version = "2.1.0"
description = "django-inline-actions adds actions to each row of the ModelAdmin or InlineModelAdmin."
authors = ["Alexander Frenzel <alex@relatedworks.com>"]

readme = "README.rst"
license = "BSD-3-Clause"

homepage = "https://github.com/escaped/django-inline-actions"
repository = "https://github.com/escaped/django-inline-actions"
documentation = "https://github.com/escaped/django-inline-actions/blob/master/README.rst"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
django-webtest = "^1.9"
pytest-mock = "^1.10"
tox = "^3.9"
pytest-flake8 = "^1.0"
flake8-isort = "^2.7"
pytest-django = "^3.4"
pytest-cov = "^2.7"
lxml = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
