[metadata]
description-file =
    README.rst
    CHANGELOG

[bdist_wheel]
universal = 1


[isort]
line_length = 90
known_project = inline_actions


[flake8]
exclude =
    .git,
    __pycache__,
    dist
    build

max-line-length = 90
max-complexity = 9


[coverage:run]
branch = True
include = inline_actions/*
omit =
    */tests/*

[coverage:report]
show_missing = True
exclude_lines =
  pragma: no cover

  # Don't complain about missing debug-only code:
  def __unicode__
  def __repr__
  def __str__

  # Don't complain if tests don't hit defensive assertion code:
  raise AssertionError
  raise NotImplementedError

  # Don't complain if non-runnable code isn't run:
  if __name__ == __main__:


[tool:pytest]
addopts = --flake8 --durations=10 --cov=inline_actions --cov-report term
norecursedirs = build dist docs htmlcov
DJANGO_SETTINGS_MODULE=test_proj.settings
testpaths =
    tests_proj
python_paths = .
