[metadata]
description-file =
    README.rst
    CHANGELOG

[bdist_wheel]
universal = 1


[isort]
line_length = 90
known_project = inline_actions


[flake8]
exclude =
    .git,
    __pycache__,
    dist

max-line-length = 90
max-complexity = 9


[coverage:run]
branch = True
include = inline_actions/*
omit =
    */tests/*

[coverage:report]
show_missing = True
exclude_lines =
  pragma: no cover

  # Don't complain about missing debug-only code:
  def __unicode__
  def __repr__
  def __str__

  # Don't complain if tests don't hit defensive assertion code:
  raise AssertionError
  raise NotImplementedError

  # Don't complain if non-runnable code isn't run:
  if __name__ == .__main__.:


[tool:pytest]
addopts = --flake8 --durations=10 --cov=inline_actions --cov-report term
norecursedirs = build dist migrations
DJANGO_SETTINGS_MODULE=test_proj.settings
testpaths =
    inline_actions
    test_proj
python_paths = .


[mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version=3.6
platform=Linux

# flake8-mypy expects the two following for sensible formatting
show_column_numbers=True
show_error_context=False

# do not follow imports (except for ones found in typeshed)
follow_imports=skip

# suppress errors about unsatisfied imports
ignore_missing_imports=True

# allow untyped calls as a consequence of the options above
disallow_untyped_calls=False

# allow returning Any as a consequence of the options above
warn_return_any=False

# treat Optional per PEP 484
strict_optional=True

# ensure all execution paths are returning
warn_no_return=True

# lint-style cleanliness for typing
warn_redundant_casts=True
warn_unused_ignores=True

# The following are off by default.  Flip them on if you feel
# adventurous.
disallow_untyped_defs=False
check_untyped_defs=False
